syntax = "proto3";

// 定义go生成后的包名
option go_package = "./;api";
package api;

message UserLoginReq {
  string UserName = 1;
  string Password = 2;
}

message UserLoginResp {
  string UserId = 1;
  string Token = 2;
}

message UserRegisterReq {
  string UserName = 1;
  string Password = 2;
  string ConfirmPassword = 3;
}

message UserRegisterResp {
  string UserId = 1;
  string Token = 2;
}

message UserInfoReq {
  string UserId = 1;
}

message UserInfo {
  string UserId = 1;
  string UserName = 2;
  int64 FollowCount = 3;
  int64 FollowerCount = 4;
  int64 IsFollow = 5;
  string Avatar = 6;
  int64 PublishNum = 7;
  int64 FavouriteNum = 8;
  int64 LikeNum = 9;
  int64 ReceivedLikeNum = 10;
}

message UserInfoResp {
    UserInfo user = 1;
}

message PublishListReq {
  string UserId = 1;
}

message VideoInfo {
  int64 VideoId = 1;
  UserInfo UserInfo = 2;
  int64 FavoriteCount = 3;
  int64 CommentCount = 4;
  int64 IsFavorite = 5;
  string Title = 6;
}

message PublishListResp {
  VideoInfo Video = 1;
}

message CommentInfo {
  string CommentId = 1;
  UserInfo User = 2;
  string VideoId = 3;
  string Content = 4;
  string PublishDate = 5;
}

message CreateCommentReq {
  string VideoId = 1;
  int64 ActionType = 2;
  string Content = 3;
  string CommentId = 4;
  string UserID = 5;
}

message CreateCommentResp {
  string CommentId = 1;
}

message CommentListReq {
  string VideoId = 1;
}

message CommentListResp {
  repeated CommentInfo List = 1;
}

// 定义接口
service BaseService {
  rpc UserRegister(UserRegisterReq) returns (UserRegisterResp);
  rpc UserLogin(UserLoginReq) returns (UserLoginResp);
  rpc UserInfo(UserInfoReq) returns (UserInfoResp);
  rpc PublishList (PublishListReq) returns (PublishListResp);
  rpc CreateComment (CreateCommentReq) returns (CreateCommentResp);
  rpc CommentList (CommentListReq) returns (CommentListResp);
}
